--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<meta http-equiv="refresh" content="0; url=https://lfmugo52j8v.typeform.com/to/d7JFYBTh" />
+<iframe src="https://lfmugo52j8v.typeform.com/to/d7JFYBTh" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    Your browser doesn't support iframes
+</iframe>
