--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<script>
+    var loc = window.location.href+'';
+if (loc.indexOf('http://')==0){
+    window.location.href = loc.replace('http://','https://');
+}
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
